cmake_minimum_required(VERSION 3.27)
project(Data_Structure_and_Algorithms)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Data_Structure_and_Algorithms  01_线性表/sequence_list.c)

#add_executable(Data_Structure_and_Algorithms  02_链表/linked_list1.c)

#add_executable(Data_Structure_and_Algorithms  02_链表/linked_list2.c)

#add_executable(Data_Structure_and_Algorithms  02_链表/MyLinkedList.cpp)

#add_executable(Data_Structure_and_Algorithms  02_链表/MylinkedList2.cpp)

#add_executable(Data_Structure_and_Algorithms 03_栈和队列/stack1.c)

#add_executable(Data_Structure_and_Algorithms 03_栈和队列/stack2.c)

#add_executable(Data_Structure_and_Algorithms 03_栈和队列/queue1.c)

add_executable(Data_Structure_and_Algorithms 03_栈和队列/queue2.c)