cmake_minimum_required(VERSION 3.27)
project(Data_Structure_and_Algorithms)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Data_Structure_and_Algorithms  01_线性表/sequence_list.c)

#add_executable(Data_Structure_and_Algorithms  02_链表/linked_list1.c)
#add_executable(Data_Structure_and_Algorithms  02_链表/linked_list2.c)

#add_executable(Data_Structure_and_Algorithms  02_链表/MyLinkedList.cpp)
#add_executable(Data_Structure_and_Algorithms  02_链表/MylinkedList2.cpp)

#add_executable(Data_Structure_and_Algorithms 03_栈和队列/stack1.c)
#add_executable(Data_Structure_and_Algorithms 03_栈和队列/stack2.c)

#add_executable(Data_Structure_and_Algorithms 03_栈和队列/queue1.c)
#add_executable(Data_Structure_and_Algorithms 03_栈和队列/queue2.c)
#add_executable(Data_Structure_and_Algorithms 03_栈和队列/queue3.c)

#add_executable(Data_Structure_and_Algorithms 04_树/BinaryTree.c)
#add_executable(Data_Structure_and_Algorithms 04_树/BinaryTree2.c)
#add_executable(Data_Structure_and_Algorithms 04_树/BinaryTree3.c)
#add_executable(Data_Structure_and_Algorithms 04_树/BinaryTree4.c)
#add_executable(Data_Structure_and_Algorithms 04_树/MaxHeap.c)

#add_executable(Data_Structure_and_Algorithms 05_哈希表/HashTable.c)
#add_executable(Data_Structure_and_Algorithms 05_哈希表/HashTable2.c)
#add_executable(Data_Structure_and_Algorithms 05_哈希表/HashTable3.c)

#add_executable(Data_Structure_and_Algorithms 06_图/dfs_01.cpp)
#add_executable(Data_Structure_and_Algorithms 06_图/island_01.cpp)
#add_executable(Data_Structure_and_Algorithms 06_图/island_02.cpp)
#add_executable(Data_Structure_and_Algorithms 06_图/island_area_01.cpp)
add_executable(Data_Structure_and_Algorithms 06_图/island_area_02.cpp)
